--- a/src/components/Mahakaleshwar/MahakaleshwarContent.css
+++ b/src/components/Mahakaleshwar/MahakaleshwarContent.css
@@ -65,16 +65,54 @@
   
   .img-responsive {
     width: 100%;
+    height: 600px;
+    max-width: 600px;
+    object-fit: cover;
     border-radius: 8px;
     display: block;
   }
+  
   
   .two-column {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 40px;
-    align-items: center;
+    /* align-items: center; */
+    align-items: start; 
   }
+
+  .info-box {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-left: 4px solid #007BFF; /* Optional accent */
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    margin-top: 20px;
+  }
+  
+  .info-box h4 {
+    margin-bottom: 15px;
+    color: #333;
+    font-size: 1.2rem;
+  }
+  
+  .info-box ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .info-box li {
+    margin-bottom: 10px;
+    font-size: 0.95rem;
+  }
+  
+  .info-box strong {
+    display: inline-block;
+    width: 150px;
+    color: #444;
+  }
+  
   
   /* Hero Section */
   .hero {
