--- a/src/components/Mahakaleshwar/MahakaleshwarContent.css
+++ b/src/components/Mahakaleshwar/MahakaleshwarContent.css
@@ -173,6 +173,7 @@
   .content-text p {
     line-height: 1.8;
     margin-bottom: 20px;
+    text-align: justify;
     color: var(--text-light);
   }
   
